# agents

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GETTING-STARTED.md  README.md
.claude/: project-memory.md
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect.md  context-manager.md  devops.md  fullstack.md  installer.md  investigator.md  local-review.md  qa.md  retro.md  reviewer.md  security.md  shipper.md  spec-writer.md  strategist.md  ux.md
.claude/commands/: agency-run.md  architect.md  devops.md  fullstack.md  hire-team.md  qa.md  retro.md  security.md  spec-writer.md  strategist.md  ux.md
.github/workflows/: traffic.yml
docs/: auth-ownership.md  handoff-chain.md  install.md  modes.md
docs/blog/: zero-dep-agents-vs-gstack.md
eval/: rubric.md
eval/tasks/: context-accuracy.md  investigator-discipline.md  retro-persistence.md  reviewer-thoroughness.md  shipper-readiness.md  (+2 more)
scripts/: eval.sh  setup.sh  validate.sh
sdk/: agents_registry.json  pyproject.toml
sdk/navox/: __init__.py  cli.py  client.py  journal.py  orchestrator.py  server.py
sdk/navox/eval/: __init__.py  runner.py  scorer.py
sdk/navox/models/: __init__.py  agent_config.py  handoff_contract.py  output_schema.py
sdk/navox/validators/: __init__.py  contract_checker.py  frontmatter.py  output_validator.py  prompt_linter.py
sdk/tests/: test_contracts.py  test_eval.py  test_models.py  test_orchestrator.py  test_server_client.py  test_validators.py
templates/: python-fastapi.CLAUDE.md
tests/: test_contracts.py  test_eval.py  test_validators.py
(+14 files in other folders)
