[project]
name = "navox"
version = "3.0.0"
description = "Agent orchestration, validation, and evaluation for Navox Labs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
navox = "navox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["navox*"]
